[package]
name = "cypat_scoring_engine"
version = "0.1.0"
authors = ["Teresa Maria Rivera"]
description = "A CyberPatriots scoring engine library"
repository = "https://github.com/ComradeYellowCitrusFruit/cypat_v2"
keywords = ["cypat", "cyberpatriots"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cypat"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4"
generic-array = "1"
sha2 = "0.10"
digest = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
envy = "0.4"

[features]
# sql_data = []