[package]
name = "cypat_scoring_engine"
version = "0.1.0"
authors = ["Teresa Maria Rivera"]
description = "A CyberPatriots scoring engine library"
repository = "https://github.com/ComradeYellowCitrusFruit/cypat_v2"
keywords = ["cypat", "cyberpatriots"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cypat"
path = "src/lib.rs"
crate-type = ["lib"]

[build-dependencies]
rustc_version = "0.4"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["utility"]
utility = []
database = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:toml"]
# sql_data = []

[profile.dev]
opt-level = 1
overflow-checks = false
debug = 2
lto = "thin"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 16
rpath = false