[package]
name = "cypat_scoring_engine"
version = "0.2.1"
authors = ["Teresa Maria Rivera"]
description = "A CyberPatriots scoring engine library"
repository = "https://github.com/ComradeYellowCitrusFruit/cypat_v2"
keywords = ["cypat", "cyberpatriots"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cypat"
path = "src/lib.rs"
crate-type = ["lib"]

[build-dependencies]
rustc_version = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincred", "lmaccess", "lmapibuf", "fileapi", "winnt", "handleapi", "accctrl", "aclapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.152"

[features]
default = ["utility"]
utility = []
# sql_data = []

[profile.dev]
opt-level = 1
overflow-checks = false
debug = 2
lto = "thin"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 16
rpath = false